[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yrt"
version = "0.1.0"
description = "Automated system that tracks YouTube subscriptions and categorizes new uploads into playlists"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Dylan \"Dyl-M\" Monfret", email = "dyl_m.dev@proton.me" }
]
keywords = ["youtube", "playlist", "automation", "tracker", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "google-auth==2.41.1",
    "google-auth-oauthlib==1.2.3",
    "isodate==0.7.2",
    "pandas==2.3.3",
    "pygithub==2.8.1",
    "python-youtube==0.9.8",
    "requests==2.32.5",
    "tqdm==4.67.1",
    "tzlocal==5.3.1",
]

[project.optional-dependencies]
dev = [
    "mypy==1.19.1",
    "pandas-stubs==2.3.3.260113",
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ruff==0.14.10",
    "types-requests==2.32.4.20260107",
]
# Future analytics features (currently unused)
analytics = [
    "beautifulsoup4==4.14.3",
    "ipykernel==7.1.0",
    "jupyter==1.1.1",
    "nbformat==5.10.4",
    "numpy==2.4.2",
    "plotly==6.5.0",
    "scikit-learn==1.8.0",
]

[project.urls]
Repository = "https://github.com/Dyl-M/youtube_release_tracker"
Issues = "https://github.com/Dyl-M/youtube_release_tracker/issues"

# CLI entry point (requires wrapper function - see main.py)
# [project.scripts]
# yrt = "yrt.main:cli"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["isodate.*", "pyyoutube.*", "tqdm.*", "google_auth_oauthlib.*", "tzlocal.*"]
ignore_missing_imports = true