[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yrt"
version = "0.1.0"
description = "Automated system that tracks YouTube subscriptions and categorizes new uploads into playlists"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Dylan \"Dyl-M\" Monfret", email = "dyl_m.dev@proton.me" }
]
keywords = ["youtube", "playlist", "automation", "tracker", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "google-auth>=2.55.0,<3",
    "google-auth-oauthlib>=1.4,<2",
    "isodate>=0.7.2,<1",
    "pandas>=3.0.3,<4",
    "pygithub>=2.9.1,<3",
    "python-youtube>=0.9.9,<1",
    "requests>=2.34.2,<3",
    "tqdm>=4.68.3,<5",
    "tzlocal>=5.4.3,<6"
]

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "pandas-stubs==3.0.3.260530",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.18",
    "types-requests==2.33.0.20260518",
]
# Future analytics features (currently unused)
analytics = [
    "beautifulsoup4==4.15.0",
    "ipykernel==7.3.0",
    "jupyter==1.1.1",
    "nbformat==5.10.4",
    "numpy==2.5.0",
    "plotly==6.8.0",
    "scikit-learn==1.9.0",
]

[project.urls]
Repository = "https://github.com/Dyl-M/youtube_release_tracker"
Issues = "https://github.com/Dyl-M/youtube_release_tracker/issues"

# CLI entry point (requires wrapper function - see main.py)
# [project.scripts]
# yrt = "yrt.main:cli"

[tool.ruff]
extend-exclude = ["*.ipynb"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_no_return = true
warn_unreachable = true
strict_optional = true

[[tool.mypy.overrides]]
module = ["isodate.*", "pyyoutube.*", "tqdm.*", "google_auth_oauthlib.*", "tzlocal.*"]
ignore_missing_imports = true