[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yrt"
version = "0.1.0"
description = "Automated system that tracks YouTube subscriptions and categorizes new uploads into playlists"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Dylan \"Dyl-M\" Monfret", email = "dyl_m.dev@proton.me" }
]
keywords = ["youtube", "playlist", "automation", "tracker", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "google-auth>=2.55.0,<3",
    "google-auth-oauthlib>=1.4,<2",
    "isodate>=0.7.2,<1",
    "pandas>=3.0.3,<4",
    "pygithub>=2.9.1,<3",
    "python-dateutil>=2.9.0,<3",
    "python-youtube>=0.9.9,<1",
    "requests>=2.34.2,<3",
    "tqdm>=4.68.3,<5",
    "tzlocal>=5.4.3,<6"
]

[project.optional-dependencies]
dev = [
    "mypy==2.1.0",
    "pandas-stubs==3.0.3.260530",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "ruff==0.15.18",
    "types-requests==2.33.0.20260518",
]
# Future analytics features (currently unused)
analytics = [
    "beautifulsoup4==4.15.0",
    "ipykernel==7.3.0",
    "jupyter==1.1.1",
    "nbformat==5.10.4",
    "numpy==2.5.0",
    "plotly==6.8.0",
    "scikit-learn==1.9.0",
]

[project.urls]
Repository = "https://github.com/Dyl-M/youtube_release_tracker"
Issues = "https://github.com/Dyl-M/youtube_release_tracker/issues"

# CLI entry point (requires wrapper function - see main.py)
# [project.scripts]
# yrt = "yrt.main:cli"

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = [
    "F", # pyflakes
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific rules
    "D", # pydocstyle
    "N", # pep8-naming
    "ANN", # flake8-annotations
    "S", # flake8-bandit (security)
    "T20", # flake8-print
    "PT", # flake8-pytest-style
    "RET", # flake8-return
    "TCH", # flake8-type-checking
]
ignore = [
    "D104", # missing docstring in public package (re-export __init__ files)
    "ANN401", # explicit Any is intentional (codebase uses dict[str, Any] for API payloads)
    "RUF022", # __all__ uses intentional comment-grouped ordering, not alphabetical
]

[tool.ruff.lint.per-file-ignores]
"_tests/**" = ["ANN", "S101"] # tests: no annotations required, assert is expected
"_scripts/**" = ["T20"] # maintenance scripts print progress to the console
"yrt/main.py" = ["T20"] # local mode prints progress to the console

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["yrt"]

[tool.ruff.format]
quote-style = "single" # preserve the codebase's single-quote convention

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["isodate.*", "pyyoutube.*", "tqdm.*", "google_auth_oauthlib.*", "tzlocal.*"]
ignore_missing_imports = true